--- a/apps/blog/templates/blog/tags/pagecut.html
+++ b/apps/blog/templates/blog/tags/pagecut.html
@@ -1,4 +1,4 @@
-<div class="text-center">
+<div class="text-center mt-2 mt-sm-1 mt-md-0 mb-3">
     {% if page_obj.has_previous %}
     <a class="text-success" href="?page={{ page_obj.previous_page_number }}">上一页</a>
     {% else %}
