--- a/templates/test_html.html
+++ b/templates/test_html.html
@@ -28,7 +28,8 @@
                          alt="Generic placeholder image">
                     <div class="media-body">
                         <div class="small text-muted mb-2">
-                            <span><img class="rounded-circle mr-1 avatar" src="http://www.stopfollow.com/media/avatar/timg_wX5F4n5.jpg" alt="用户名称">Hopetree</span>
+                            <span><img class="rounded-circle mr-1 avatar"
+                                       src="http://www.stopfollow.com/media/avatar/timg_wX5F4n5.jpg" alt="用户名称">Hopetree</span>
                             <span class="ml-2"><i class="fa fa-calendar-times-o"></i> 1 月，1 周 之前</span>
                         </div>
                         <h5 class="mt-0 font-weight-bold"><a href="#">第一步使用 bootstrap4 建立前端网页</a></h5>
@@ -44,6 +45,16 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="form-group mb-0">
+                <label for="exampleFormControlTextarea1">Example textarea</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <div class="btn-group" role="group" aria-label="First group">
+                <button type="button" class="btn btn-secondary">1</button>
+                <button type="button" class="btn btn-secondary">2</button>
+                <button type="button" class="btn btn-secondary">3</button>
+                <button type="button" class="btn btn-secondary">4</button>
             </div>
         </div>
         <div class="col-md-4">
