--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -18,7 +18,7 @@
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="http://cdn.bootcss.com/headroom/0.5.0/headroom.min.js"></script>
     <!-- blog CSS -->
-    <link href="{% static 'blog/css/base.css' %}?v=20171223.02447" rel="stylesheet">
+    <link href="{% static 'blog/css/base.css' %}?v=20171223.0255" rel="stylesheet">
     {% block top-file %}{% endblock %}
 </head>
 <body>
@@ -47,7 +47,7 @@
     var headroom  = new Headroom(myElement);
     headroom.init();
 </script>
-<script src="{% static 'blog/js/base.js'%}?v=20171222"></script>
+<script src="{% static 'blog/js/base.js'%}?v=20171222.1231"></script>
 {% block end_file %}{% endblock %}
 </body>
 </html>
