--- a/apps/blog/templates/blog/tags/article-list.html
+++ b/apps/blog/templates/blog/tags/article-list.html
@@ -1,4 +1,4 @@
-{% load blog_tags %}
+{% load blog_tags oauth_tags %}
 {% load humanize %}
 <div class="summary_list">
     {% for article in articles %}
