--- a/apps/blog/templates/blog/tags/base_right.html
+++ b/apps/blog/templates/blog/tags/base_right.html
@@ -8,8 +8,8 @@
     {% get_category_list as categories %}
     <ul class="list-group list-group-flush f-16">
         {% for each in categories %}
-        <li class="list-group-item d-flex justify-content-between align-items-center pl-0 pr-2 py-2">
-            <a href="{{ each.get_absolute_url }}" title="查看【{{ each.name }}】分类下所有文章">{{ each.name }}</a>
+        <li class="list-group-item d-flex justify-content-between align-items-center pr-2 py-2">
+            <a class="category-item" href="{{ each.get_absolute_url }}" title="查看【{{ each.name }}】分类下所有文章">{{ each.name }}</a>
             <span class="badge text-center" title="当前分类下有{{ each.total_num }}篇文章">{{ each.total_num }}</span>
         </li>
         {% endfor %}
