--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -3,7 +3,7 @@
 {% load blog_tags %}
 
 {% block top-file %}
-    <link href="{% static 'blog/css/timeline.css'%}?v=1.02" rel="stylesheet">
+    <link href="{% static 'blog/css/timeline.css'%}?v=1.03" rel="stylesheet">
 {% endblock %}
 
 {% block head_title %}关于网站{% endblock %}
@@ -12,7 +12,7 @@
 <meta name="keywords" content="Timeline时间轴,网站About页面,个人博客建站日志">
 {% endblock %}
 
-{% block content %}
+{% block base_content %}
 <div class="container">
     <div class="page-header">
         <h1 id="timeline">Timeline</h1>
