--- a/apps/blog/templates/blog/tag.html
+++ b/apps/blog/templates/blog/tag.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="{{ search_instance.name }}">
 {% endblock %}
 
-{% block content %}
+{% block base_content %}
 <div class="container">
     <div class="row">
         <div class="col-lg-8">
@@ -22,7 +22,7 @@
                 {% url 'blog:tag' search_instance.slug as base_tag %}
                 {% url 'blog:tag_hot' search_instance.slug as hot_tag %}
                 <a class="pb-2 {% if request.path == base_tag %}active{% endif %}" href="{{ base_tag }}">
-                    <i class="fa fa-bars mr-1"></i>时间排序{{ kwargs}}</a>
+                    <i class="fa fa-bars mr-1"></i>时间排序</a>
                 <a class="pb-2 ml-4 {% if request.path == hot_tag %}active{% endif %}" href="{{ hot_tag }}">
                     <i class="fa fa-fire mr-1"></i>热度排序</a>
             </div>
