--- a/apps/blog/templates/blog/tags/article-list.html
+++ b/apps/blog/templates/blog/tags/article-list.html
@@ -1,6 +1,6 @@
 {% load blog_tags oauth_tags %}
 {% load humanize %}
-<div class="summary_list">
+<div class="summary-list">
     {% for article in articles %}
     <div class="media mb-1 mb-sm-2 mb-md-3 p-2 p-lg-3">
         <div class="align-self-center mr-2 mr-lg-3 w-25 modal-open">
@@ -15,7 +15,7 @@
                            alt="{% get_show_name article.author %}">{% get_show_name article.author %}</span>
                 <span><i class="fa fa-calendar-times-o ml-2 mr-1"></i>{{ article.create_date|naturaltime}}</span>
             </div>
-            <h2 class="mt-0 font-weight-bold f-16">
+            <h2 class="mt-0 font-weight-bold text-info f-16">
                 <a href="{{ article.get_absolute_url }}" target="_blank">{{ article.title}}</a>
             </h2>
             <p class="d-none d-sm-block mb-2 f-15">{{ article.summary|truncatechars:130 }}</p>
