--- a/apps/blog/templates/blog/category.html
+++ b/apps/blog/templates/blog/category.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="{{ search_instance.name }}">
 {% endblock %}
 
-{% block content %}
+{% block base_content %}
 <div class="container">
     <div class="row">
         <div class="col-lg-8">
@@ -22,7 +22,7 @@
                 {% url 'blog:category' search_instance.slug as base_category %}
                 {% url 'blog:category_hot' search_instance.slug as hot_category %}
                 <a class="pb-2 {% if request.path == base_category %}active{% endif %}" href="{{ base_category }}">
-                    <i class="fa fa-bars mr-1"></i>时间排序{{ kwargs}}</a>
+                    <i class="fa fa-bars mr-1"></i>时间排序</a>
                 <a class="pb-2 ml-4 {% if request.path == hot_category %}active{% endif %}" href="{{ hot_category }}">
                     <i class="fa fa-fire mr-1"></i>热度排序</a>
             </div>
