--- a/apps/oauth/templates/oauth/tags/user_avatar.html
+++ b/apps/oauth/templates/oauth/tags/user_avatar.html
@@ -1,6 +1,6 @@
 {% load oauth_tags %}
 {% if user.socialaccount_set.exists and user.avatar.url == '/media/avatar/default.png' %}
-<img class="base-avatar rounded-circle" src="{{ user.socialaccount_set.all.0.get_avatar_url }}" alt="{% get_show_name user %}" width="40">
+<img class="rounded-circle avatar" src="{{ user.socialaccount_set.all.0.get_avatar_url }}" alt="{% get_show_name user %}" width="40">
 {% else %}
-<img class="base-avatar rounded-circle" src="{{ user.avatar.url }}" alt="{% get_show_name user %}" width="40">
+<img class="rounded-circle avatar" src="{{ user.avatar.url }}" alt="{% get_show_name user %}" width="40">
 {% endif %}
